--- a/packages/site/src/pages/index.module.scss
+++ b/packages/site/src/pages/index.module.scss
@@ -1,12 +1,12 @@
 .page {
-  position: absolute;
-  display: grid;
-  margin-right: calc(var(--leva-width) + var(--leva-margin));
-  grid-template-rows: var(--header-height) 1fr;
-  inset: 0;
+  --header-height: 80px;
+  --leva-offset: calc(var(--leva-width) + var(--leva-margin));
+
+  padding-top: var(--header-height);
+  padding-right: var(--leva-offset);
 
   @media (max-width: 820px) {
-    margin-right: 0px;
+    padding-right: 0;
 
     & > div[class^="leva"] {
       display: none !important;
@@ -15,10 +15,15 @@
 }
 
 .header {
-  position: relative;
+  position: fixed;
+  z-index: 1;
+  top: 0;
   display: flex;
+  width: calc(100% - var(--leva-offset));
   min-width: 0;
+  height: var(--header-height);
   padding: 0 20px;
+  background: #f5f5f5;
   place-items: center;
 
   &:after {
@@ -29,6 +34,10 @@
     height: 2px;
     background: rgba(0, 0, 0, 0.04);
     content: "";
+  }
+
+  @media (max-width: 820px) {
+    width: 100%;
   }
 }
 
@@ -61,6 +70,30 @@
   }
 }
 
+.version {
+  position: relative;
+  display: inline-block;
+  margin-left: 8px;
+  color: #666;
+  font-size: 12px;
+  text-decoration: none;
+  transform: translateY(-1px);
+  transition: opacity 0.2s ease-in-out;
+
+  &:before {
+    position: absolute;
+    z-index: -1;
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+    content: "";
+    inset: -6px -6px -4px;
+  }
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
 .links {
   flex: none;
   margin-left: auto;
@@ -69,7 +102,7 @@
     display: flex;
     padding: 0;
     margin: 0;
-    gap: 12px;
+    gap: 16px;
     list-style: none;
   }
 }
@@ -78,17 +111,7 @@
   position: relative;
   display: block;
   overflow: hidden;
-  padding: 10px;
-  border-radius: 50%;
   transition: opacity 0.2s ease-in-out;
-
-  &:before {
-    position: absolute;
-    background: currentColor;
-    content: "";
-    inset: 0;
-    opacity: 0.08;
-  }
 
   &:hover {
     opacity: 0.5;
@@ -109,12 +132,75 @@
   color: #c00;
 }
 
+.twitter {
+  color: #1af;
+}
+
 .main {
   position: relative;
   display: grid;
-  padding: 20px;
+  padding: 40px;
   contain: style;
-  gap: 20px;
-  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
   place-content: start;
+}
+
+.toasts {
+  position: fixed;
+  z-index: 10;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  height: 0;
+  place-content: center;
+}
+
+.toast {
+  position: absolute;
+  bottom: 20px;
+  display: flex;
+  width: max-content;
+  max-width: calc(100vw - 2 * 20px);
+  padding: 8px 8px 8px 22px;
+  backdrop-filter: saturate(180%) blur(20px);
+  background: rgba(60, 60, 60, 0.8);
+  border-radius: 100px;
+  box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08), 0px 8px 32px rgba(0, 0, 0, 0.06);
+  color: #fff;
+  font-size: 15px;
+  font-weight: 600;
+  place-content: center;
+  place-items: center;
+
+  .label {
+    overflow: hidden;
+    padding: 0.2em;
+    margin: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    @media (max-width: 820px) {
+      span {
+        display: none;
+      }
+    }
+  }
+
+  .button {
+    flex: none;
+    padding: 6px 14px;
+    margin-left: 12px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 100px;
+    color: inherit;
+    font-size: 13px;
+    font-weight: 700;
+    text-decoration: none;
+    transition: background 0.2s ease-in-out;
+
+    &:hover {
+      background: rgba(255, 255, 255, 0.2);
+    }
+  }
 }
