--- a/packages/site/src/components/Cell.module.scss
+++ b/packages/site/src/components/Cell.module.scss
@@ -2,9 +2,9 @@
   position: relative;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.04), 0px 4px 24px rgba(0, 0, 0, 0.02);
+  box-shadow: 0 2px 6px rgb(0 0 0 / 4%), 0 4px 24px rgb(0 0 0 / 2%);
 
-  &:before {
+  &::before {
     display: inline-block;
     padding-bottom: 100%;
     content: "";
