--- a/packages/site/src/pages/index.module.scss
+++ b/packages/site/src/pages/index.module.scss
@@ -95,7 +95,7 @@
   }
 
   &:hover {
-    opacity: 50%;
+    opacity: 0.5;
   }
 }
 
@@ -119,7 +119,7 @@
   transition: opacity 0.2s ease-in-out;
 
   &:hover {
-    opacity: 50%;
+    opacity: 0.5;
   }
 
   svg {
