Tweak main radii

--- a/packages/site/src/styles/main.css
+++ b/packages/site/src/styles/main.css
@@ -130,7 +130,7 @@
 }
 
 pre[class*="language-"] {
-  @apply scrollbar border border-zinc-150 dark:border-zinc-800;
+  @apply scrollbar rounded-lg border border-zinc-150 dark:border-zinc-800;
 
   .token {
     &.important,
